# poc-semantic-layer

./: .gitignore  README.md  dashboard.py  docker-compose.yml  main.py  pyproject.toml
cube/: package.json
cube/model/cubes/: events.yml  orders.yml  users.yml
scripts/: codegen.sh  setup.sh
